# lsmio

./: .clang-format  .gitignore  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  DEVELOPERS.md  Developers.md  GEMINI.md  LICENSE  README.md  Release.latest.md  build.sh  clean.sh  micro.sh
.github/workflows/: 00-clang-format.yml  01-cmake-depend-all.yml  01-ubuntu-depend-all.yml  02-cmake-build-all.yml  02-macos-depend-all.yml  08-ubuntu-pkg-deb.yml  09-github-release.yml  09-ubuntu-release.yml  cmake-build-all.yml  cmake-depend-all.yml  cmake-multi-platform.yml
benchmark/: CMakeLists.txt  bm_adios.cpp  bm_base.cpp  bm_base.hpp  bm_leveldb.cpp  bm_manager.cpp  bm_native.cpp  bm_rocksdb.cpp
benchmark/lsmiotool/: lsmiotool
benchmark/lsmiotool/lib/: __init__.py  data.py  debuggable.py  env.py  log.py  main.py  plot.py
benchmark/lsmiotool/test/: __init__.py
benchmark/lsmiotool/test/parse/: __init__.py  test_log.py
benchmark/scripts/example/: lfs-config.in.sh
benchmark/scripts/include/: dirs-cleanup.in.sh  dirs-config.in.sh  dirs-setup.in.sh  dirs-vars.in.sh  load-modules.in.sh  vars.in.sh
benchmark/scripts/jobs/: all-vars.in.sh  batch.in.sh  ior-benchmark.sh  ior-vars.in.sh  job-all.in.sh  job-large.pbs  job-large.sbatch  job-small.pbs  job-small.sbatch  lmp-benchmark.sh  lmp-setup.in.sh  lmp-vars.in.sh  lsmio-benchmark.sh  lsmio-vars.in.sh  sbatch.in.sh  submission.in.sh
benchmark/scripts/lmp-reaxff/: in.reaxc.hns
benchmark/scripts/parse/: ior-parse.sh  lmp-parse.sh  lsmio-parse.sh  raw-to-latex.py  test.out
benchmark/scripts/warpx/: warpx-dualwrites.sh
cmake/: DebianPkg.cmake  PackageAdios.cmake  PackageCLI11.cmake  PackageFMT.cmake  PackageGoogleLog.cmake  PackageGoogleTest.cmake  PackageLevelDB.cmake  PackageMPI.cmake  PackageRocksDB.cmake  ProjectOptions.cmake  lsmio-config.cmake
cmake/upstream/: GoogleTest.cmake  GoogleTestAddTests.cmake
doc/dependencies/: 01-build-gflags.sh  02-build-gtest.sh  03-build-glog.sh  04-build-fmt.sh  05-build-boost.sh  05-build-cli11.sh  11-build-darshan.sh  12-build-ior.sh  14-build-mpibench.sh  21-build-adios2.sh  22-build-leveldb.sh  23-build-rocksdb.sh  24-build-epoch.sh  91-build-amrex.sh  92-build-warpx.sh  93-build-lammps.sh  94-build-gromacs.sh  95-build-cp2k.sh  96-build-cmake.sh
include/: CMakeLists.txt
include/lsmio/: benchmark.hpp  lsmio.hpp
include/lsmio/manager/: manager.hpp
include/lsmio/manager/client/: client.hpp  client_adios.hpp  client_mpi.hpp
include/lsmio/manager/store/: file_closer.hpp  file_pool.hpp  store.hpp  store_ldb.hpp  store_native.hpp  store_rdb.hpp
include/lsmio/manager/store/native/: file_closer.hpp  file_pool.hpp  memtable.hpp  sstable_manager.hpp  store_native.hpp
include/lsmio/posix/: posix.hpp
lib/: CMakeLists.txt  benchmark.cpp  lsmio.cpp
lib/adios-plugin/: lsmio_plugin.cpp  lsmio_plugin.hpp  lsmio_plugin.tcc
lib/manager/: manager.cpp
lib/manager/client/: client.cpp  client_adios.cpp  client_mpi.cpp
lib/manager/store/: file_closer.cpp  file_pool.cpp  store.cpp  store_ldb.cpp  store_native.cpp  store_rdb.cpp
lib/manager/store/native/: file_closer.cpp  file_pool.cpp  memtable.cpp  sstable_manager.cpp  store_native.cpp
lib/posix/: posix.cpp
out.txt:0:0/: L0-000001.sst
test/: CMakeLists.txt  hdd_test.sh  lsmio_plugin.xml  test_adios.cpp  test_benchmark.cpp  test_file_closer.cpp  test_file_pool.cpp  test_leveldb.cpp  test_manager.cpp  test_memtable.cpp  test_mpi_adios.cpp  test_mpi_base.cpp  test_mpi_hdf5.cpp  test_mpi_manager.cpp  test_mpi_utils.cpp  test_mpi_utils.hpp  test_native.cpp  test_native_extended.cpp  test_native_tuning.cpp  test_plugin.cpp  test_posix.cpp  test_rocksdb.cpp  test_sstable_manager.cpp
tools/bmtool/: bmtool
tools/bmtool/example/: example-ior.in.sh
tools/bmtool/include/: dirs-config.in.sh  load-modules.in.sh  vars.in.sh
tools/bmtool/jobs/: batch.in.sh  dirs.in.sh  ior-benchmark.sh  ior-vars.in.sh  job-large.pbs  job-large.sbatch  job-small.pbs  job-small.sbatch  lsmio-benchmark.sh  lsmio-setup.in.sh  submission.in.sh
tools/bmtool/parse/: ior-parse.sh  lsmio-parse.sh
tools/bmtool/warpx/: laser_ion_inputs
tools/epoch/: benchmark.sbatch  benchmark.sh  loop.sh  run.sh
tools/lsmiotool/: lsmiotool
tools/lsmiotool/etc/: environments.json
tools/lsmiotool/lib/: __init__.py  compat.py  data.py  debuggable.py  dirs.py  env.py  hpc.py  jobs.py  log.py  main.py  output.py  plot.py  scheduler.py
tools/lsmiotool/lib/env/: __init__.py  dev.py  hpcvars.py  isambard.py  viking.py  viking2.py
tools/lsmiotool/test/: __init__.py
tools/lsmiotool/test/main/: __init__.py  test_hpc.py  test_jobs.py
tools/lsmiotool/test/parse/: __init__.py  test_data.py  test_log.py  test_output.py
tools/lsmiotool/test/parse/example/: ior-report.csv  ior-single-run.txt  lsm-single-run.txt  lsmio-report.csv
tools/lsmiotool/test/parse/example/ior-outputs/1/2023-07-21/: out-collective-16-1M-2023-07-21-node169-0.txt.2  out-collective-16-64K-2023-07-21-node169-0.txt.2  out-collective-16-8M-2023-07-21-node169-0.txt.2  out-collective-4-1M-2023-07-21-node169-0.txt.2  out-collective-4-64K-2023-07-21-node169-0.txt.2  out-collective-4-8M-2023-07-21-node169-0.txt.2
tools/lsmiotool/test/parse/example/ior-outputs/2/2023-07-21/: out-collective-16-1M-2023-07-21-node150-0.txt.2  out-collective-16-64K-2023-07-21-node150-0.txt.2  out-collective-16-8M-2023-07-21-node150-0.txt.2  out-collective-4-1M-2023-07-21-node150-0.txt.2  out-collective-4-64K-2023-07-21-node150-0.txt.2  out-collective-4-8M-2023-07-21-node150-0.txt.2
tools/lsmiotool/test/parse/example/lsm-outputs/1/2023-07-02/: out-rocksdb-16-1M-2023-07-02-node103-0.txt.2  out-rocksdb-4-64K-2023-07-02-node103-0.txt.2
tools/lsmiotool/test/parse/example/lsm-outputs/4/2023-07-02/: out-rocksdb-16-1M-2023-07-02-node108-0.txt.2  (+8 more)
tools/lsmiotool/test/runtime/: __init__.py  test_dirs.py  test_jobs.py  test_scheduler.py
tools/shell/: bm.sh
tools/shell/example/: mpi_bench.in.sh
tools/shell/jobs/: ior-setup.in.sh  job-small.sbatch
tools/shell/parse/: ior-parse.sh
tools/shell/warpx/: warpx-run.sh
(+19 files in other folders)
